###### TWE 5.1-3 RELEASED ######
2015-08-03 Sasa Bojanic <sasaboy@together.at>
   # Now configuring JSplitPane's divider positions (MainDividerLocation, FirstSmallDividerLocation and SecondSmallDividerLocation properties) in percentage (not in an absolute values)
   # Shark mode:
      - support for AUTO_COMPLETION extended attribute for manual activities

2015-07-31 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - allowing i18n variables to be used when creating variables' InitialValue expression
      
2015-07-27 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - implemented i18n variable support
      - supported insertion of system variable name/description/translation and process variable name/description when defining XPDL string or email subject/content

2015-07-15 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Added additional constants for i18n support

2015-06-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Improved support to TXWToolAgent

2015-06-03 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - BeanShell and JavaScript tool agent are now allowed to use any process variable

2015-06-02 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - BeanShell and JavaScript tool agent are now allowed to have FormalParameter "Script" which is used to define script to execute in the case extended attributes "AppName" or "Script" are not defined

2015-05-27 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - supported new (I18n related) extended attributes: 
         * I18N_XPDL_FOLDER_NAME (Package level), 
         * I18N_PROCESS_DEFINITION_FILE_NAME (WorkflowProcess level), 
         * I18N_NAME_TRANSLATION_KEY and I18N_DESCRIPTION_TRANSLATION_KEY (Package, WorkflowProcess, Activity and DataField level)
      - supported new variable i18n_lang_code which is now represented as Package/Workflow process attribute
      - some changes in SharkPackageValidator API method signatures
      